# advent_of_code_2020

./: .gitignore  .gitmodules  .mergify.yml  README.md  advent-of-code.asd  aoc.lisp  package.lisp
2018/: day01.lisp  day02.input.txt  day02.lisp  day03.lisp  day04.lisp  day05.input.txt  day05.lisp  day06.input.txt  day06.lisp  day07.input.txt  day07.lisp  day08.lisp  day09.input.txt  day09.lisp  day10.input.txt  day10.lisp  day11.lisp  day12.input.txt  day12.lisp  tests.lisp
2020/: day01.lisp  day05.lisp  day06.input.txt  day08.lisp  day09.lisp  day11.lisp  day13.lisp  day14.lisp  day16.input.txt  day17.input.txt  day21.input.txt  day23.input.txt  day23.lisp  day24.lisp  day25.lisp  tests.lisp
Day12/: Program.cs
Day16/: test2.3.txt  ticketRules.txt
Day22/: puzzleInput22.txt  test.txt
Dyr-El-python/: aocbase.py  day01.py  day01.txt  day02.py  day03.py  day03.txt  day04.py  day04.txt  day05.py  day06.py  day07.py  day07.txt  day08.py  day08.txt  day09.md  day09.py  day09.txt  day10.py  day10.txt  day11.py  day11.txt  day12.py  day12.txt  (+25 more)
bjorn-soderqvist-rust/: Cargo.toml  README.md
bjorn-soderqvist-rust/day1/: Cargo.toml
bjorn-soderqvist-rust/day1/src/: main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day11/: Cargo.toml
bjorn-soderqvist-rust/day11/src/: lib.rs  main.rs  part1.rs
bjorn-soderqvist-rust/day11/src/tests/: 2example1.txt  2example2.txt  2example3.txt  2layout3.txt  2layout4.txt  2layout5.txt  2layout6.txt  2layout7.txt  layout2.txt  layout3.txt  layout4.txt  layout5.txt  layout6.txt
bjorn-soderqvist-rust/day12/: Cargo.toml
bjorn-soderqvist-rust/day12/src/: input.txt  lib.rs  main.rs
bjorn-soderqvist-rust/day2/: Cargo.toml
bjorn-soderqvist-rust/day2/src/: data.txt  main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day3/: Cargo.toml
bjorn-soderqvist-rust/day3/src/: main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day4/: Cargo.toml
bjorn-soderqvist-rust/day4/src/: main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day5/: Cargo.toml
bjorn-soderqvist-rust/day5/src/: input.txt  main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day6/: Cargo.toml
bjorn-soderqvist-rust/day6/src/: input.txt  main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day7/: Cargo.toml
bjorn-soderqvist-rust/day7/src/: main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day8/: Cargo.toml
bjorn-soderqvist-rust/day8/src/: input.txt  main.rs  part1.rs  part2.rs
bjorn-soderqvist-rust/day9/: Cargo.toml
bjorn-soderqvist-rust/day9/src/: input.txt  main.rs  part1.rs  part2.rs
digimatic-c++/: .clang-format  .gitignore  CMakeLists.txt
digimatic-c++/common/: common.h  graph.h  tuple_hash.h  tuple_math.h
digimatic-c++/day01/: config.h.in  input.txt  main.cpp
digimatic-c++/day02/: main.cpp
digimatic-c++/day03/: main.cpp
digimatic-c++/day04/: CMakeLists.txt  main.cpp
digimatic-c++/day05/: CMakeLists.txt  main.cpp
digimatic-c++/day06/: main.cpp
digimatic-c++/day07/: main.cpp
digimatic-c++/day08/: input.txt  main.cpp
digimatic-c++/day09/: main.cpp
digimatic-c++/day0x/: CMakeLists.txt  main.cpp
digimatic-c++/day10/: input.txt  main.cpp
digimatic-c++/day11/: main.cpp
digimatic-c++/day12/: main.cpp
digimatic-c++/day13/: main.cpp
digimatic-c++/day14/: input.txt  main.cpp
digimatic-c++/day15/: CMakeLists.txt  main.cpp
digimatic-c++/day16/: config.h.in  input.txt  main.cpp
digimatic-c++/day17/: input.txt  main.cpp
digimatic-c++/day18/: input.txt  main.cpp
digimatic-c++/day19/: CMakeLists.txt  main.cpp
digimatic-c++/day20/: main.cpp
digimatic-c++/day21/: main.cpp
digimatic-c++/day22/: main.cpp
digimatic-c++/day23/: main.cpp
digimatic-c++/day24/: input.txt  main.cpp
digimatic-c++/day25/: main.cpp
f00ale-cpp/: CMakeLists.txt
f00ale-cpp/data/: a01.txt  a02.txt  a03.txt  a04.txt  a06.txt  a07.txt  a08.txt  a09.txt  a10.txt  a11.txt  a12.txt  a13.txt  a14.txt  a15.txt  a16.txt  a17.txt  a18.txt  a19.txt  a20.txt  a21.txt  a22.txt  a23.txt  a24.txt  a25.txt  p02.txt  p03.txt  p06.txt  p07.txt  p08.txt  p11.txt  p14.txt  p15.txt  p17.txt  p18.txt  p19.txt  p21.txt  p22.txt  p24.txt  p25.txt
f00ale-cpp/src/: aoc.h  main.cpp  p01.cpp  p02.cpp  p03.cpp  p04.cpp  p05.cpp  p06.cpp  p07.cpp  p08.cpp  p09.cpp  p10.cpp  p11.cpp  p12.cpp  p13.cpp  p14.cpp  p15.cpp  p16.cpp  p17.cpp  p18.cpp  p19.cpp  p20.cpp  p21.cpp  p22.cpp  p23.cpp  p24.cpp  p25.cpp
mantono-rust/: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
mantono-rust/.github/workflows/: rust.yml
mantono-rust/aoc_macro/: Cargo.toml
mantono-rust/aoc_macro/src/: lib.rs
mantono-rust/git-hooks/: pre-commit
mantono-rust/inputs/2020/: day1
mantono-rust/src/: args.rs  cfg.rs  comp.rs  days.rs  fmt.rs  input.rs  logger.rs  main.rs  output.rs
mantono-rust/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
(+1059 files in other folders)
