[package]
name = "aoc"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2018"

[dependencies]
clap = "2.33"
regex = "1.3"
log = "0.4"
env_logger = "0.7"
termcolor = "1.1"
chrono = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.10", features = ["blocking"] }
aoc_macro = { path = "aoc_macro" }